// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty set has default marginBottom 1 1`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:row}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}",
}
`;

exports[`set with one item 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    a
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:row}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}",
}
`;

exports[`set with two items 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    <div
        className="a g c"
    >
        a
    </div>
    <div
        className="a g c h i"
    />
    <div
        className="a g c"
    >
        b
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:row}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}
    .g{flex-direction:column}
    .h{height:12}
    .i{width:12}",
}
`;

exports[`set with two items and custom spaceBetween 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    <div
        className="a g c"
    >
        a
    </div>
    <div
        className="a g c h i"
    />
    <div
        className="a g c"
    >
        b
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:row}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}
    .g{flex-direction:column}
    .h{height:48}
    .i{width:48}",
}
`;

exports[`vertical set with one item 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    a
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}",
}
`;

exports[`vertical set with two items 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    <div
        className="a b c"
    >
        a
    </div>
    <div
        className="a b c g h"
    />
    <div
        className="a b c"
    >
        b
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}
    .g{height:24}
    .h{width:24}",
}
`;

exports[`vertical set with two items and custom spaceBetween 1`] = `
Object {
  "component": <div
    className="a b c d e f"
>
    <div
        className="a b c"
    >
        a
    </div>
    <div
        className="a b c g h"
    />
    <div
        className="a b c"
    >
        b
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{margin-bottom:24}
    .e{align-items:flex-start}
    .f{flex-wrap:wrap}
    .g{height:48}
    .h{width:48}",
}
`;
